--- a/package/src/index.html
+++ b/package/src/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Spike Free Material Angular Dashboard</title>
+    <title>BABY BLUE</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/images/logos/favicon.ico"
+      href="assets/images/logos/dark-logo.png"
     />
   </head>
   <body>
